Home page Start

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,57 @@
 
 @font-face {
   font-family: "inter";
-  src: url(./assets/fonts/static/Inter_18pt-Light.ttf);
+  src: url("./assets/fonts/static/Inter_18pt-Light.ttf");
+}
+
+/* Home */
+
+.home-bg-img::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: url("./assets/home/sec3/Bg\ image.png") center/cover no-repeat;
+  opacity: 0.3;
+  z-index: 0;
+}
+
+.home-bg-img > * {
+  position: relative;
+  z-index: 1;
+}
+
+@keyframes homeEntranceR {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(0);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes homeSide{
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(10%);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(-10%);
+    opacity: 1;
+  }
+}
+
+.home-bg-img .design {
+  animation: homeEntranceR 3s ease forwards 3s 1;
 }
