--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 }
 
 @font-face {
-  font-family: "inter";
-  src: url("./assets/fonts/static/Inter_18pt-Light.ttf");
+  font-family: inter;
+  src: url("./assets/fonts/Inter_18pt-Light.ttf");
 }
 
 /* Home */
