--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   src: url("./assets/fonts/Inter_18pt-Light.ttf");
 }
 
+/* Header  */
+
+header a.active{
+  color: #007b82;
+}
+
 /* Home */
 .marquee-container {
   width: 100%;
